2010-01-12  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.7.2

	* debian/*: Similarly updated for new release to Debian

	* .Rbuildignore: Add 'inst/doc/{html,latex,man} as we no
	  longer ship the voluminous doxygen-generated content

	* inst/doc/examples/ConvolveBenchmarks/convolve2*: Added simple
	  benchmark on the well-known vector convolution example from
	  'Writing R Extensions' to compare C and C++ implementations
	* inst/doc/examples/ConvolveBenchmarks/buildAndRun.sh: idem
	  inst/doc/examples/ConvolveBenchmarks/exampleRCode.r: idem

2010-01-12  Romain Francois <francoisromain@free.fr>

	* inst/doc/examples/ConvolveBenchmarks/convolve2*: Added additional
	C++ examples to convolution benchmark highlighting performance gains

2010-01-11  Romain Francois <francoisromain@free.fr>

	* src/Rcpp/CharacterVector.h: StringProxy gains operator+=
	* src/CharacterVector.cpp: implementation

	* src/Rcpp/*Vector.h: operator[] now throws index out of bounds
	exception when needed (FR#770)
	* src/*Vector.cpp: same

	* src/Rcpp/Environment.h: operator[](string) for environment
	allowing to get/set values of a binding in this environment.
	The Environment::Binding class has been created to act as
	a proxy.
	* src/Environment.cpp: idem
	* inst/unitTests/runit.environments.R: unit tests for the above

2010-01-10  Romain Francois <francoisromain@free.fr>

	* src/Rcpp/Pairlist.h: operator[] for pairlist using proxies
	* src/Pairlist.cpp : idem
	* inst/unitTests/runit.Pairlist.R: new unit tests

	* src/Rcpp/Language.h: same for Language
	* src/Language.cpp : idem
	* inst/unitTests/runit.Language.R: new unit tests

	* inst/unitTests/runit.Function.R: added unit test for function
	throwing exceptions

	* src/Function.cpp: grab the condition message and not the call

2010-01-09  Romain Francois <francoisromain@free.fr>

	* src/Rcpp/RObject.h: attr can now be used to get or set the
	attribute (used to be read only). This is another manifestation