@@ -3,8 +3,7 @@
 
 \maketitle
 
-\abstract{
-}
+\abstract{TBD}
 
 \section{Introduction}
 
@@ -286,7 +285,7 @@ to the following :
 \begin{example}
 #include <Rcpp.h>
 using namespace Rcpp;
-NumericVector ab = {123.45, 67.89};
+NumericVector ab = \{123.45, 67.89\};
 \end{example}
 
 \subsection{character vectors}
