@@ -1,6 +1,6 @@
 Package: Rcpp
 Title: Rcpp R/C++ interface package
-Version: 0.7.2
+Version: 0.7.2.1
 Date: $Date$
 Author: Dirk Eddelbuettel and Romain Francois, with contributions 
  by Simon Urbanek and David Reiss; based on code written during 
@@ -9,7 +9,7 @@ Maintainer: Dirk Eddelbuettel <edd@debian.org>
 Description: R/C++ interface classes and examples
  The Rcpp library maps data types betweeen R and C++, and includes support
  for R types real, integer, character, vector, matrix, Date, datetime (i.e.
- POSIXct) at microsecond resolution, data frame, and function. Transer to and
+ POSIXct) at microsecond resolution, data frame, and function. Transfer to and
  from simple SEXP objects is particular easy. Calling R functions from C++ is
  also supported.
  .
