@@ -59,10 +59,6 @@ namespace Rcpp{
 	}
 #endif
 
-double& NumericVector::operator[]( int i ) const throw(index_out_of_bounds){ 
-	if( i<0 || i>=length()) throw index_out_of_bounds() ;
-	return REAL(m_sexp)[i] ;
-}
 double* NumericVector::begin() const { 
 	return REAL(m_sexp) ;
 }
