@@ -1,3 +1,15 @@
+2010-01-13  Romain Francois <francoisromain@free.fr>
+
+	* src/Rcpp/Environment.h: Environment::Binding gains a templated
+	conversion operator, to facilitate distance 2 implicit conversion
+	making this possible: 
+	Environment env("package:stats") ;
+	Function f = env["rnorm"] ;
+
+	* src/Rcpp/NumericVector.h: operator[] is promoted to inline
+
+	
+
 2010-01-12  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION: Release 0.7.2
